Fixed Table Spacing / Background Repeat

--- a/Caution-Scheduling-Web/src/routes/labschedule/labschedule.css
+++ b/Caution-Scheduling-Web/src/routes/labschedule/labschedule.css
@@ -27,15 +27,6 @@
   object-fit: cover;
 }
 
-.lab-schedule-image2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
 
 .lab-schedule-content {
   display: flex;
